assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

/* CSS Resets Start */
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}


@media (prefers-reduced-motion: no-preference) {
    html {
        interpolate-size: allow-keywords;
    }
}

body {

    line-height: 1.5;

    -webkit-font-smoothing: antialiased;
}


img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}


input,
button,
textarea,
select {
    font: inherit;
}


p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}


p {
    text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: balance;
}


#root,
#__next {
    isolation: isolate;
}

/* CSS Resets End */

body {
    font-family: 'Roboto', sans-serif;
}

header {
    height: 5rem;
    position: sticky;
    top: 0;
    z-index: 1000;
}

header a {
    text-decoration: none;
    color: #fff;
}

header nav ul {
    list-style: none;
}

.logo,
.hero {
    font-family: 'Oswald', sans-serif;
}

.logo,
.hero h1 {
    text-transform: uppercase;
}

.hero {
    line-height: 3rem;
}

main {
    background-image: url(../img/hero.png);
    background-attachment: fixed;
    background-size: cover;
    margin-top: 0rem;
    background-position: center top 4rem;
}

.card-img-top {
    width: 100%;
    height: 15vw;
    object-fit: cover;
}

.experience .position:last-child p,
.about p:last-child {
    margin-bottom: 0;
}

